<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MoodEventForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select a Mood*"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/emotion_picker"
            android:name="com.kernelcrew.moodapp.ui.components.EmotionPickerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_situation"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Social Situation">

            <AutoCompleteTextView
                android:id="@+id/emotion_situation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/simple_items" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Reason">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emotion_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timestamp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select Date and Time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timestamp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Photo"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/upload_splash" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/photo_reset_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:drawableLeft="@drawable/ic_refresh"
            android:insetRight="32dp"
            android:text="Remove Image" />

        <TextView
            android:id="@+id/photo_button_error"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/design_default_color_error" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/location_fragment"
            android:name="com.kernelcrew.moodapp.ui.LocationFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/visibility_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@id/visible_public_button"
            app:singleSelection="true">

            <Button
                android:id="@+id/visible_public_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_person"
                android:text="Public" />

            <Button
                android:id="@+id/visible_private_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_lock"
                android:text="Private" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="Submit" />
    </LinearLayout>
</ScrollView>
