<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <include
            android:id="@+id/toggle_anger"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_confusion"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_disgust"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_fear"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <include
            android:id="@+id/toggle_happy"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_sadness"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_shame"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toggle_surprise"
            layout="@layout/emotion_picker_toggle"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/emotion_picker_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/design_default_color_error" />


</LinearLayout>