...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mood_event_form"
                android:name="com.kernelcrew.moodapp.ui.MoodEventForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
...
